--- a/xml/inequalityinput.ui
+++ b/xml/inequalityinput.ui
@@ -43,6 +43,9 @@
      <property name="handleWidth">
       <number>3</number>
      </property>
+     <property name="childrenCollapsible">
+      <bool>false</bool>
+     </property>
      <widget class="QWidget" name="layoutWidget">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
@@ -186,14 +189,14 @@
          <item>
           <widget class="QComboBox" name="comboBoxShape">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="minimumSize">
             <size>
-             <width>80</width>
+             <width>50</width>
              <height>0</height>
             </size>
            </property>
@@ -243,14 +246,14 @@
          <item>
           <widget class="QComboBox" name="comboBoxColor">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="minimumSize">
             <size>
-             <width>95</width>
+             <width>50</width>
              <height>0</height>
             </size>
            </property>
