--- a/xml/bareminimumplotter.ui
+++ b/xml/bareminimumplotter.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>392</height>
+    <width>803</width>
+    <height>393</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -257,9 +257,12 @@
                    <rect>
                     <x>0</x>
                     <y>0</y>
-                    <width>642</width>
-                    <height>68</height>
+                    <width>640</width>
+                    <height>69</height>
                    </rect>
+                  </property>
+                  <property name="focusPolicy">
+                   <enum>Qt::TabFocus</enum>
                   </property>
                   <property name="autoFillBackground">
                    <bool>false</bool>
@@ -746,8 +749,8 @@ background: transparent;
                    <rect>
                     <x>0</x>
                     <y>0</y>
-                    <width>642</width>
-                    <height>68</height>
+                    <width>640</width>
+                    <height>69</height>
                    </rect>
                   </property>
                   <property name="autoFillBackground">
@@ -835,7 +838,7 @@ background:white;
             <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Ubuntu'; font-size:11pt;&quot;&gt;Error display&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
            <property name="textInteractionFlags">
@@ -1034,8 +1037,8 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>20</height>
+     <width>803</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
