--- a/xml/bareminimumplotter.ui
+++ b/xml/bareminimumplotter.ui
@@ -6,15 +6,101 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>832</width>
-    <height>396</height>
+    <width>846</width>
+    <height>387</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>BareMinimumPlotter</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">/*Background*/
+   <string notr="true">/*Scrollbar*/
+ QScrollBar {
+     background: rgb(100,100,100);
+     width: 15px;
+     margin: 15px 0px 15px 0px;
+ }
+
+
+
+ QScrollBar::handle:enabled {
+     background: rgb(63, 98, 255);
+	 border-top: 2px solid black;
+	 border-bottom: 2px solid black;
+     min-height: 7px;
+ }
+
+ QScrollBar::add-line:enabled { /*down arrow box*/
+     background: rgb(100,100,100);
+     height: 15px;
+     subcontrol-position: bottom;
+     subcontrol-origin: margin;
+ }
+
+ QScrollBar::sub-line:enabled { /*top arrow box*/
+     background: rgb(100,100,100);
+     height: 15px;
+     subcontrol-position: top;
+     subcontrol-origin: margin;
+ }
+
+ QScrollBar:up-arrow:enabled {
+     width: 7px;
+     height: 7px;
+ 	 image: url(../bare_minimum_plotter/rsc/up-arrow-white-small.png);
+
+ }
+
+ QScrollBar:down-arrow:enabled {
+     width: 7px;
+     height: 7px;
+ 	 image: url(../bare_minimum_plotter/rsc/down-arrow-white-small.png);
+ }
+
+ QScrollBar::add-page, QScrollBar::sub-page {
+     background: none;
+ }
+
+/*Scrollbar: Disabled*/
+QScrollBar:disabled{
+	background: transparent;
+}
+
+ QScrollBar::handle:disabled {
+     background: transparent;
+     min-height: 7px;
+ }
+
+ QScrollBar::add-line:disabled { /*down arrow box*/
+     background: transparent;
+     height: 15px;
+     subcontrol-position: bottom;
+     subcontrol-origin: margin;
+ }
+
+ QScrollBar::sub-line:disabled { /*top arrow box*/
+     background: transparent;
+     height: 15px;
+     subcontrol-position: top;
+     subcontrol-origin: margin;
+ }
+
+ QScrollBar:up-arrow:disabled {
+     width: 3px;
+     height: 3px;
+     background: transparent;
+ }
+
+ QScrollBar:down-arrow:disabled {
+     width: 3px;
+     height: 3px;
+     background: transparent;
+ }
+
+
+
+
+/*Background*/
 QWidget#centralWidget {
 	background: rgb(80,80,80);
 }
@@ -131,7 +217,7 @@ QSplitter#splitter_Inequality, QSplitter#splitter_Variable {
 
 /*Comboboxes*/
 QComboBox {
-	background: rgb(63, 98, 255);
+	background: rgb(63, 98, 255); /*blue*/
 	border-radius:0;
 	color: white;
 	font: 13px calibri;
@@ -151,6 +237,7 @@ QComboBox::down-arrow {
 QListView {
 	background: white;
 }
+
 
 /*Progress Bar*/
 QProgressBar {
@@ -187,7 +274,7 @@ QProgressBar::chunk {
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="iconSize">
        <size>
@@ -281,10 +368,25 @@ QProgressBar::chunk {
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
-          <widget class="QWidget" name="horizontalLayoutWidget">
+          <property name="childrenCollapsible">
+           <bool>false</bool>
+          </property>
+          <widget class="QWidget" name="container_Inequalities" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>3</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>115</height>
+            </size>
+           </property>
            <layout class="QHBoxLayout" name="horizontalLayout_InequalityGroup">
             <property name="bottomMargin">
-             <number>0</number>
+             <number>1</number>
             </property>
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_InequalityButtons">
@@ -579,7 +681,7 @@ QProgressBar::chunk {
                    </property>
                    <property name="sizeHint" stdset="0">
                     <size>
-                     <width>6</width>
+                     <width>4</width>
                      <height>20</height>
                     </size>
                    </property>
@@ -637,7 +739,7 @@ QProgressBar::chunk {
                     <x>0</x>
                     <y>0</y>
                     <width>695</width>
-                    <height>69</height>
+                    <height>59</height>
                    </rect>
                   </property>
                   <property name="focusPolicy">
@@ -687,10 +789,22 @@ QProgressBar::chunk {
             </item>
            </layout>
           </widget>
-          <widget class="QWidget" name="horizontalLayoutWidget_2">
+          <widget class="QWidget" name="container_Variables" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>3</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>110</height>
+            </size>
+           </property>
            <layout class="QHBoxLayout" name="horizontalLayout_VariableGroup">
             <property name="bottomMargin">
-             <number>0</number>
+             <number>1</number>
             </property>
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_VariableButtons">
@@ -1074,7 +1188,7 @@ QProgressBar::chunk {
                    </property>
                    <property name="sizeHint" stdset="0">
                     <size>
-                     <width>6</width>
+                     <width>4</width>
                      <height>20</height>
                     </size>
                    </property>
@@ -1132,7 +1246,7 @@ QProgressBar::chunk {
                     <x>0</x>
                     <y>0</y>
                     <width>695</width>
-                    <height>69</height>
+                    <height>54</height>
                    </rect>
                   </property>
                   <property name="autoFillBackground">
@@ -1186,7 +1300,7 @@ QProgressBar::chunk {
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
              <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
+             <verstretch>1</verstretch>
             </sizepolicy>
            </property>
            <property name="minimumSize">
@@ -1510,7 +1624,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>832</width>
+     <width>846</width>
      <height>21</height>
     </rect>
    </property>
